# omnia

./: .gitignore  .wkg-config.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Makefile  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  expanded.txt
crates/guest-macros/: Cargo.toml  README.md  example.rs
crates/guest-macros/src/: command.rs  guest.rs  http.rs  lib.rs  messaging.rs  otel.rs
crates/guest-macros/src/snapshots/: omnia_guest_macros__guest__tests__expand_command.snap  omnia_guest_macros__guest__tests__expand_http.snap  omnia_guest_macros__guest__tests__expand_messaging.snap
crates/guest-macros/tests/: compile_fail.rs  guest.rs
crates/guest-macros/tests/compile_fail/: duplicate_owner.rs  duplicate_owner.stderr  duplicate_route.rs  duplicate_route.stderr  get_with_body.rs  get_with_body.stderr  invalid_topic_name.rs  invalid_topic_name.stderr  missing_owner.rs  missing_owner.stderr  missing_provider.rs  missing_provider.stderr  post_with_query.rs  post_with_query.stderr  unknown_key.rs  unknown_key.stderr
crates/omnia/: Cargo.toml  README.md
crates/omnia-guest/: Cargo.toml  README.md
crates/omnia-guest/src/: api.rs  capabilities.rs  error.rs  lib.rs  mcp.rs  orm.rs
crates/omnia-guest/src/api/: command.rs  http.rs  into_http.rs  invocation.rs  invoke.rs  messaging.rs  operation.rs  route.rs
crates/omnia-guest/src/capabilities/: broadcast.rs  config.rs  http.rs  messaging.rs  model.rs  state.rs
crates/omnia-guest/src/mcp/: protocol.rs  router.rs  types.rs
crates/omnia-guest/src/orm/: delete.rs  filter.rs
crates/omnia-guest/tests/: api.rs  command.rs
crates/omnia/src/: cli.rs  command.rs  compile.rs  config.rs  create.rs  deployment.rs  dispatch.rs  host.rs  host_scaffold.rs  lib.rs  manifest.rs  mount.rs  options.rs  registry.rs  routing.rs  runtime.rs  scaffold.rs  selector.rs  source.rs  store.rs  telemetry.rs  traits.rs  transport.rs  working_tree.rs
crates/omnia/src/deployment/: manifest.rs  source.rs
crates/omnia/src/dispatch/: handle.rs  host.rs  link.rs  resolve.rs  selector.rs  serve.rs  transport.rs  value.rs
crates/omnia/src/options/: compile.rs
crates/omnia/src/registry/: routing.rs
crates/omnia/src/runtime/: command.rs  entry.rs
crates/omnia/tests/: command.rs  guest_link.rs  linking.rs
crates/omnia/tests/common/: mod.rs
crates/seam-suite/: Cargo.toml
crates/seam-suite/src/: lib.rs
crates/seam-suite/tests/seam/: blobstore.rs  cli.rs  config.rs  docstore.rs  embedded.rs  fallback.rs  fixture.rs  guest_api.rs  guest_link.rs  http.rs  identity.rs  keyvalue.rs  main.rs  mcp.rs  messaging.rs  model.rs  otel.rs  routing.rs  sql.rs  vault.rs  websocket.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: guest.rs  http.rs  lib.rs  manifest.rs  model.rs  runtime.rs
crates/testkit/src/model/: replay.rs
crates/testkit/tests/: model.rs  replay.rs
crates/wasi-cli/: Cargo.toml  README.md
crates/wasi-cli/src/: host.rs  lib.rs
crates/wasi-cli/tests/: run.rs
crates/wasi-docstore/: Cargo.toml  README.md  Specification.md
crates/wasi-docstore/src/: document_store.rs  guest.rs  host.rs  lib.rs
crates/wasi-docstore/src/guest/: convert.rs  mod.rs  store.rs
crates/wasi-docstore/src/host/: default_impl.rs  resource.rs  store_impl.rs  types_impl.rs
crates/wasi-docstore/tests/: seam.rs
crates/wasi-docstore/wit/: docstore.wit
crates/wasi-jsondb/: Cargo.toml  README.md  Specification.md
crates/wasi-jsondb/src/: document_store.rs  host.rs
crates/wasi-jsondb/src/guest/: mod.rs  store.rs
crates/wasi-jsondb/src/host/: bson_filter.rs  default_impl.rs  resource.rs  store_impl.rs  types_impl.rs
crates/wasi-jsondb/wit/: jsondb.wit
crates/wasi-messaging/: Cargo.toml  README.md
crates/wasi-messaging/src/: guest.rs  host.rs  lib.rs
crates/wasi-messaging/tests/: seam.rs
crates/wasi-messaging/wit/: README.md  messaging.wit
crates/wasi-model/: Cargo.toml  README.md
crates/wasi-model/src/: guest.rs  host.rs  lib.rs  prompt.rs
crates/wasi-model/src/host/: answer.rs  (+9 more)
crates/wasi-model/tests/: replay.rs
crates/wasi-model/wit/: README.md  model.wit
examples/: Cargo.toml  Makefile.toml  README.md
examples/bench/: README.md  http_bench.rs
examples/blobstore/: README.md  guest.rs  runtime.rs
examples/cli/: README.md  guest.rs  runtime.rs
examples/cli-model/: README.md  guest.rs  omnia.toml  runtime.rs  shelf.rs
examples/cli-model/fixtures/: 4855dccaa38b7e6d.json
examples/command-resolver/: README.md  runtime.rs
examples/config/: README.md  guest.rs  runtime.rs
examples/conformance/: guest.rs
examples/cursor/: README.md  guest.rs  omnia.toml  runtime.rs
examples/cursor/wit/: world.wit
examples/docstore/: README.md  guest.rs  runtime.rs
examples/guest-api/: README.md  guest.rs  runtime.rs
examples/guest-link/: README.md  dynamic.rs  extra.rs  omnia.toml  register.rs  responder.rs  router.rs  runtime.rs
examples/guest-link/wit/: link.wit
examples/http/: README.md  guest.rs  runtime.rs
examples/http-proxy/: README.md  guest.rs  runtime.rs
examples/http-routing/: README.md  guest_a.rs  guest_b.rs  omnia.toml  runtime.rs
examples/identity/: .env.example  README.md  guest.rs  runtime.rs
examples/jsondb/: README.md  guest.rs  runtime.rs
examples/keyvalue/: README.md  guest.rs  runtime.rs
examples/linking/: README.md  omni.toml  omnia.toml  responder.rs  runtime.rs
examples/mcp/: README.md  guest.rs  omnia.toml  runtime.rs
examples/mcp/docs/: api-reference.md  overview.md  style-guide.md
examples/messaging/: README.md  guest.rs  runtime.rs
examples/model/: README.md  guest.rs  omni.toml  omnia.toml  runtime.rs  shelf.rs
examples/model/fixtures/: 4855dccaa38b7e6d.json  f8d0638ceb9c0aee.json
examples/model/wit/: world.wit
examples/otel/: README.md  guest.rs  runtime.rs
examples/routing/: README.md  guest_a.rs  guest_b.rs  omni.toml  runtime.rs
examples/sql/: README.md  guest.rs  runtime.rs
examples/vault/: README.md  guest.rs  runtime.rs
examples/websocket/: README.md  guest.rs  runtime.rs
examples/websockets/: guest.rs
(+389 files in other folders)
