[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.package]
authors = ["Augentic"]
categories = ["wasm", "web-programming", "asynchronous"]
edition = "2024"
homepage = "https://augentic.io"
keywords = ["runtime", "wasi", "wasm", "wasmtime", "component-model"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/omnia"
rust-version = "1.95"
version = "0.35.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", default-features = false, features = ["json"] }
base64ct = { version = "1.8.3", features = ["std"] }
bon = "3.9.3"
bytes = "1.12.1"
# The cap-* stack is held at 3.x to match wasmtime-wasi's cap-std types
# (`Descriptor` wraps `cap_std::fs::Dir`); ignored by the `outdated` task.
# Upgrade to 4.x together with cap-primitives (crates/wasi-model) once
# wasmtime-wasi moves to cap-std 4.
cap-fs-ext = "3.4.5"
cap-std = "3.4.5"
cfg-if = "1.0.4"
chrono = "0.4.45"
clap = { version = "4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
clap_complete = "4.6.7"
dashmap = "6.2.1"
fromenv = "0.1.0"
futures = "0.3.32"
futures-channel = "0.3.32"
futures-util = "0.3.32"
http = "1.4.2"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.10.1"
hyper-util = "0.1.20"
insta = "1.48.0"
# Default features pull reqwest/rustls for remote `$ref` resolution; the gate
# only validates self-contained schema documents.
jsonschema = { version = "0.47.0", default-features = false }
moka = { version = "0.12.15", features = ["sync"] }
opentelemetry = "0.32.0"
opentelemetry-proto = "0.32.0"
opentelemetry_sdk = "0.32.1"
parking_lot = "0.12.5"
pastey = "0.2.3"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.46"
rand = "0.10.2"
regex = "1.13.0"
sea-query = { version = "1.0.1", default-features = false, features = ["thread-safe", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
syn = { version = "2.0.118", features = ["full"] }
time = "0.3.53"
tokio = { version = "1.52.3", default-features = false }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.30.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde", "std"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
trybuild = "1.0.118"
wasip3 = { version = "0.7.0", features = ["http-compat"] }
# Pinned to match `wrpc`'s own dependency so the link-seam value codec stays
# byte-identical with `wrpc-wasmtime`'s.
wasm-tokio = { version = "0.6.1", default-features = false }
wasmtime = { version = "46.0.1", default-features = false, features = ["anyhow", "component-model-bytes", "parallel-compilation", "pooling-allocator"] }
wasmtime-wasi = { version = "46.0.1", features = ["p3"] }
wasmtime-wasi-config = "46.0.1"
wasmtime-wasi-http = { version = "46.0.1", features = ["p3"] }
wasmtime-wasi-io = "46.0.1"
wit-bindgen = { version = "0.59.0", features = ["async-spawn"] }

# `wrpc-wasmtime` 0.1.0 is unpublished (the crate was renamed from
# `wrpc-runtime-wasmtime` upstream); it is supplied by [patch.crates-io] below
# until the first crates.io release.
wrpc-transport = "0.29.0"
wrpc-wasmtime = "0.1.0"

# internally referenced crates
omnia = { path = "crates/omnia", version = "0.35.0" }
omnia-guest = { path = "crates/omnia-guest", version = "0.35.0" }
omnia-guest-macros = { path = "crates/guest-macros", version = "0.35.0" }
omnia-host-macros = { path = "crates/host-macros", version = "0.35.0" }
omnia-testkit = { path = "crates/testkit" }
omnia-wasi-blobstore = { path = "crates/wasi-blobstore", version = "0.35.0" }
omnia-wasi-config = { path = "crates/wasi-config", version = "0.35.0" }
omnia-wasi-docstore = { path = "crates/wasi-docstore", version = "0.35.0" }
omnia-wasi-http = { path = "crates/wasi-http", version = "0.35.0" }
omnia-wasi-identity = { path = "crates/wasi-identity", version = "0.35.0" }
omnia-wasi-keyvalue = { path = "crates/wasi-keyvalue", version = "0.35.0" }
omnia-wasi-messaging = { path = "crates/wasi-messaging", version = "0.35.0" }
omnia-wasi-model = { path = "crates/wasi-model", version = "0.35.0" }
omnia-wasi-otel = { path = "crates/wasi-otel", version = "0.35.0" }
omnia-wasi-sql = { path = "crates/wasi-sql", version = "0.35.0" }
omnia-wasi-vault = { path = "crates/wasi-vault", version = "0.35.0" }
omnia-wasi-websocket = { path = "crates/wasi-websocket", version = "0.35.0" }

[patch.crates-io]
wrpc-transport = { git = "https://github.com/bytecodealliance/wrpc" }
wrpc-wasmtime = { git = "https://github.com/bytecodealliance/wrpc" }

[profile.release]
lto = true
opt-level = "s"
strip = true

# [package.metadata.cargo-udeps.ignore]
# normal = ["openssl"]

# [package.metadata.cargo-machete]
# ignored = ["openssl"]
