[package]
name = "omnia-guest-macros"
description = "Procedural macros for Omnia WASI guest code generation"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

# Dev-only cycle onto the re-exporting crate so the generated code is
# compiled and exercised natively (cargo permits dev-dependency cycles).
[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
omnia-guest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower.workspace = true
