[package]
name = "omnia-guest"
description = "Guest framework for building WASI component applications with Omnia runtime support"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
http.workspace = true
http-body.workspace = true
omnia-guest-macros.workspace = true
omnia-wasi-sql.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-docstore.workspace = true
rand.workspace = true
sea-query.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror = "2.0.18"
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
omnia-wasi-blobstore.workspace = true
omnia-wasi-config.workspace = true
omnia-wasi-identity.workspace = true
omnia-wasi-keyvalue.workspace = true
omnia-wasi-messaging.workspace = true
omnia-wasi-model.workspace = true
omnia-wasi-websocket.workspace = true
omnia-wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower.workspace = true
tracing-subscriber.workspace = true
