[package]
name = "omnia"
description = "Ergonomic WebAssembly component runtime built on wasmtime with pluggable WASI host services"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["jit"]

# Enables just-in-time wasm to machine code compilation.
jit = ["wasmtime/cranelift"]

# Enables memory protection keys (MPK) support in the pooling allocator. MPK
# only functions on Linux/x86_64; elsewhere it compiles but is inert
# (`POOL_MEMORY_PROTECTION_KEYS=auto` falls back to leaving guard regions in
# place). Off by default.
mpk = ["wasmtime/memory-protection-keys"]

# Enables the WebAssembly GC / reference-types proposal (with the default
# copying collector) and the pooling allocator's `total_gc_heaps` control
# (`POOL_TOTAL_GC_HEAPS`). Current guests compile to linear memory and never
# allocate a GC heap, so this is off by default.
gc = ["wasmtime/gc", "wasmtime/gc-copying"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
bytes.workspace = true
cap-fs-ext.workspace = true
cap-std.workspace = true
cfg-if.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
fromenv.workspace = true
futures.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pastey.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
omnia-host-macros.workspace = true
wasm-tokio.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
wrpc-transport.workspace = true
wrpc-wasmtime.workspace = true
# wrpc-runtime-wasmtime.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow.workspace = true
omnia-testkit.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
