[package]
name = "omnia-testkit"
description = "Model doubles, fixture replay, and runtime scaffolding for Omnia tests"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# `cargo make test-guests` runs this to serialize built guests so tests
# deserialize pre-compiled components instead of JIT-compiling per process.
[[bin]]
name = "guests"
path = "src/bin/guests.rs"
required-features = ["runtime"]

[features]
default = ["runtime"]
model = ["dep:omnia-guest"]
replay = ["model", "dep:anyhow", "dep:omnia-wasi-model"]
runtime = [
    "dep:anyhow",
    "dep:bytes",
    "dep:futures",
    "dep:http",
    "dep:http-body-util",
    "dep:omnia",
    "dep:tokio",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmtime-wasi-http",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
omnia = { workspace = true, optional = true }
omnia-guest = { workspace = true, optional = true }
omnia-wasi-model = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-http = { workspace = true, optional = true }

[dev-dependencies]
futures.workspace = true
serde_json.workspace = true
