[package]
name = "omnia-testkit"
description = "Model doubles, fixture replay, and runtime scaffolding for Omnia tests"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# `cargo make test-guests` runs this to serialize built guests so tests
# deserialize pre-compiled components instead of JIT-compiling per process.
[[bin]]
name = "guests"
path = "src/bin/guests.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
omnia.workspace = true
omnia-guest.workspace = true
omnia-wasi-model.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[dev-dependencies]
futures.workspace = true
serde_json.workspace = true
