[package]
name = "omnia-wasi-cli"
description = "WASI CLI (one-shot command) trigger for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# Host-only crate: there is no guest side (the guest uses `wasip3` directly), so
# every dependency is gated to the host target. This keeps `wasmtime` out of any
# wasm32 resolution even though this crate is a `crates/*` workspace member.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
tracing.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi.workspace = true
omnia.workspace = true

# Dev-only. `tests/run.rs` builds a minimal runtime over the `cli-wasm` example
# guest and drives `WasiCli` to assert exit-status fidelity; the crate-level
# compile-fail doctest co-lists `WasiHttp` to prove the co-list guardrail
# rejects it. Integration tests / doctests see only dev-dependencies, so the
# normal deps above are repeated here as needed.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow.workspace = true
omnia.workspace = true
omnia-wasi-http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
