[package]
name = "omnia-wasi-docstore"
description = "WASI document store interface for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# dependencies shared across host and guest
[dependencies]
anyhow.workspace = true
chrono.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures.workspace = true
omnia.workspace = true
polodb_core = { version = "5.1.4", default-features = false }
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
omnia-testkit.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-otel.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
