[package]
name = "omnia-wasi-jsondb"
description = "WASI JSON document store interface for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
omnia.workspace = true
parking_lot.workspace = true
polodb_core = { version = "5.1.4", default-features = false }
regex = "1.11.1"
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# shared dependencies
[dependencies]
anyhow.workspace = true
chrono.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
