[package]
name = "omnia-wasi-messaging"
description = "WASI messaging pub/sub interface for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
omnia.workspace = true
serde.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio-stream.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
omnia-testkit.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-keyvalue.workspace = true
omnia-wasi-otel.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
