[package]
name = "omnia-wasi-model"
description = "WASI model completion interface (the augentic:model boundary) for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# dependencies shared across host and guest
[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
futures.workspace = true
omnia.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
