[package]
name = "omnia-wasi-model"
description = "WASI model completion interface (the omnia:model boundary) for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# dependencies shared across host and guest
[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Match wasmtime-wasi's cap-std stack (3.x) for `Descriptor` metadata identity.
cap-primitives = "3.4.5"
cap-std.workspace = true
futures.workspace = true
omnia.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasip3.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cap-std-v3 = { package = "cap-std", version = "3.4.5" }
omnia-testkit.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
